# advent-of-code

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
aoc/: runner.py
aoc/common/: decorators.py  storage.py
aoc/tasks/_template_day/: part_1.py
aoc/tasks/day_01/: part_2.py
aoc/tasks/day_02/: part_1.py
aoc/tasks/day_03/: part_1.py
aoc/tasks/day_04/: part_1.py  part_2.py
aoc/tasks/day_05/: part_2.py
aoc/tasks/day_08/: part_1.py
aoc/tasks/day_10/: part_2.py
aoc/tasks/day_11/: part_1.py
aoc/tasks/day_12/: part_1.py  part_2.py
aoc/tasks/day_14/: part_1.py  part_2.py
aoc/tasks/day_16/: part_1.py  part_2.py
aoc/tasks/day_17/: part_1.py  part_2.py
aoc/tasks/day_18/: part_1.py  part_2.py
aoc/tasks/day_20/: part_1.py
aoc/tasks/day_23/: part_2.py
aoc/tasks/day_24/: part_1.py  part_2.py
aoc/tasks/year_2022/day_01/: part_1.py
aoc/tasks/year_2022/day_02/: part_2.py
aoc/tasks/year_2022/day_03/: part_2.py
aoc/tasks/year_2022/day_05/: part_1.py
aoc/tasks/year_2022/day_06/: part_1.py  part_2.py
aoc/tasks/year_2022/day_07/: part_1.py  part_2.py
aoc/tasks/year_2022/day_08/: part_2.py
aoc/tasks/year_2022/day_09/: part_1.py  part_2.py
aoc/tasks/year_2022/day_10/: part_1.py
aoc/tasks/year_2022/day_11/: part_2.py
aoc/tasks/year_2022/day_13/: part_1.py  part_2.py
aoc/tasks/year_2022/day_15/: part_1.py  part_2.py
aoc/tasks/year_2022/day_16/: part_1.py  part_2.py
aoc/tasks/year_2022/day_17/: part_1.py  part_2.py
aoc/tasks/year_2022/day_19/: part_1.py  part_2.py
aoc/tasks/year_2022/day_20/: part_2.py
aoc/tasks/year_2022/day_21/: part_1.py  part_2.py
aoc/tasks/year_2022/day_22/: part_1.py  part_2.py
aoc/tasks/year_2022/day_23/: part_1.py  part_2.py
aoc/tasks/year_2022/day_24/: part_1.py  part_2.py
aoc/tasks/year_2022/day_25/: part_1.py
aoc/tasks/year_2023/day_01/: part_1.py  part_2.py
aoc/tasks/year_2023/day_02/: part_1.py  part_2.py
tests/tasks/_template_day/: test_template.txt
tests/tasks/day_08/: test_part_1.py  test_part_2.py
tests/tasks/day_09/: test_part_1.py  test_part_2.py
tests/tasks/day_10/: test_part_1.py  test_part_2.py
tests/tasks/day_11/: test_part_1.py  test_part_2.py
tests/tasks/day_12/: test_part_1.py  test_part_2.py
tests/tasks/day_13/: test_part_1.py  test_part_2.py
tests/tasks/day_14/: test_part_1.py  test_part_2.py
tests/tasks/day_15/: test_part_1.py  test_part_2.py
tests/tasks/day_16/: test_part_1.py  test_part_2.py
tests/tasks/day_17/: test_part_1.py  test_part_2.py
tests/tasks/day_18/: test_part_1.py  test_part_2.py
tests/tasks/day_19/: test_part_1.py  test_part_2.py
tests/tasks/day_20/: test_part_1.py  test_part_2.py
tests/tasks/day_21/: test_part_1.py  test_part_2.py
tests/tasks/day_22/: test_part_1.py  test_part_2.py
tests/tasks/day_23/: test_part_1.py  test_part_2.py
tests/tasks/day_24/: test_part_1.py  test_part_2.py
tests/tasks/day_25/: test_part_1.py
(+271 files in other folders)
