[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Moritz Strenger <moritz.strenger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.scripts]
exec = "aoc.runner:main"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
fire = "^0.5.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
loguru = "^0.6.0"
networkx = "^2.8.8"
tqdm = "^4.64.1"
joblib = "^1.2.0"
scipy = "^1.9.3"
z3-solver = "^4.11.2.0"
advent-of-code-data = "^2.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
py-spy = "^0.3.14"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ["aoc/tasks/_template_day", "tests/tasks/_template_day"]

[tool.ruff.lint]
select = ["E", "F", "N", "I", "W"]