[dependency-groups]
dev = [
    "pre-commit<3.0.0,>=2.20.0",
    "pytest<8.0.0,>=7.2.0",
    "py-spy<1.0.0,>=0.3.14",
    "ruff<1.0.0,>=0.8.0",
]

[tool.pdm.build]
includes = ["aoc"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120
extend-exclude = ["aoc/tasks/_template_day", "tests/tasks/_template_day"]

[tool.ruff.lint]
select = ["E", "F", "N", "I", "W"]

[project]
authors = [
    {name = "Moritz Strenger", email = "moritz.strenger@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<3.13,>=3.11"
dependencies = [
    "rich<13.0.0,>=12.6.0",
    "fire<1.0.0,>=0.5.0",
    "numpy<2.0.0,>=1.23.5",
    "pandas<2.0.0,>=1.5.2",
    "loguru<1.0.0,>=0.6.0",
    "networkx<3.0.0,>=2.8.8",
    "tqdm<5.0.0,>=4.64.1",
    "joblib<2.0.0,>=1.2.0",
    "scipy<2.0.0,>=1.9.3",
    "z3-solver<5.0.0.0,>=4.11.2.0",
    "advent-of-code-data<3.0.0,>=2.0.1",
    "python-dotenv<2.0.0,>=1.0.0",
    "scipy-stubs~=1.14.1",
    "shapely>=2.1.2",
    "matplotlib>=3.10.7",
]
name = "advent-of-code"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
exec = "aoc.runner:main"
